--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </div>
 
           <div class="product-div">
-            <h3>Mouse</h3>
+            <h3>Mouses</h3>
             <div class="product-elementos caja-product">
               <img src="./imagenes/Mouse1.jpg" alt="Auricular" />
               <h4>Mouse inalambrico Logitech M170 negro</h4>
