--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </section>
 
       <section id="productos">
-        <h2>Categorías</h2>
+        <h2>CATEGORIAS</h2>
         <div class="categories">
           <li><a href="">Auriculares</a></li>
           <li><a href="">Teclados</a></li>
