arreglo mdq movil

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Itotecno</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./itotecno.png" type="image/x-png" />
@@ -58,7 +58,7 @@
         <h2>BENEFICIOS</h2>
         <div class="other">
           <div class="about caja-about">
-            <div class="about-info">
+            <div class="about-info garantia">
               <h3>Garantía</h3>
               <img
                 src="./imagenes/certificado-de-garantia.png"
@@ -110,111 +110,119 @@
         <div class="product-gral">
           <div class="product-div">
             <h3>Auriculares</h3>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Auricular1.jpg" alt="Auricular" />
-              <h4>Auriculares c/micrófono Gamer X-Lizzard PS4 PS5 XBOX PC</h4>
-              <p>$400</p>
-              <button><a href="#">Agregar al carrito</a></button>
-            </div>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Auricular2.jpg" alt="Auricular" />
-              <h4>Auriculares c/micrófono Gamer X-Lizzard PS4 PS5 XBOX PC</h4>
-              <p>$790</p>
-              <button><a href="#">Agregar al carrito</a></button>
-            </div>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Auricular3.jpg" alt="Auricular" />
-              <h4>Auriculares c/micrófono Gamer X-Lizzard USB</h4>
-              <p>$899</p>
-              <button><a href="#">Agregar al carrito</a></button>
-            </div>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Auricular4.jpg" alt="Auricular" />
-              <h4>Audífonos Gamer Logitech G335 blancos</h4>
-              <p>$2000</p>
-              <button><a href="#">Agregar al carrito</a></button>
+            <div class="product">
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Auricular1.jpg" alt="Auricular" />
+                <h4>Auriculares c/micrófono Gamer X-Lizzard PS4 PS5 XBOX PC</h4>
+                <p>$400</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Auricular2.jpg" alt="Auricular" />
+                <h4>Auriculares c/micrófono Gamer X-Lizzard PS4 PS5 XBOX PC</h4>
+                <p>$790</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Auricular3.jpg" alt="Auricular" />
+                <h4>Auriculares c/micrófono Gamer X-Lizzard USB</h4>
+                <p>$899</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Auricular4.jpg" alt="Auricular" />
+                <h4>Audífonos Gamer Logitech G335 blancos</h4>
+                <p>$2000</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
             </div>
           </div>
           <div class="product-div">
             <h3>Teclados</h3>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Teclado1.jpg" alt="Auricular" />
-              <h4>Teclado Gamer Genius Scorpion retroiluminado K220</h4>
-              <p>$400</p>
-              <button><a href="#">Agregar al carrito</a></button>
-            </div>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Teclado2.jpg" alt="Auricular" />
-              <h4>Teclado Gamer Genius retroiluminado en español</h4>
-              <p>$700</p>
-              <button><a href="#">Agregar al carrito</a></button>
-            </div>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Teclado3.jpg" alt="Auricular" />
-              <h4>Teclado HP gamer Omen 1100</h4>
-              <p>$1500</p>
-              <button><a href="#">Agregar al carrito</a></button>
-            </div>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Teclado4.jpg" alt="Auricular" />
-              <h4>Teclado Logitech gamer G513 RGB</h4>
-              <p>$4000</p>
-              <button><a href="#">Agregar al carrito</a></button>
+            <div class="product">
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Teclado1.jpg" alt="Auricular" />
+                <h4>Teclado Gamer Genius Scorpion retroiluminado K220</h4>
+                <p>$400</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Teclado2.jpg" alt="Auricular" />
+                <h4>Teclado Gamer Genius retroiluminado en español</h4>
+                <p>$700</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Teclado3.jpg" alt="Auricular" />
+                <h4>Teclado HP gamer Omen 1100</h4>
+                <p>$1500</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Teclado4.jpg" alt="Auricular" />
+                <h4>Teclado Logitech gamer G513 RGB</h4>
+                <p>$4000</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
             </div>
           </div>
 
           <div class="product-div">
             <h3>Mouses</h3>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Mouse1.jpg" alt="Auricular" />
-              <h4>Mouse inalambrico Logitech M170 negro</h4>
-              <p>$200</p>
-              <button><a href="#">Agregar al carrito</a></button>
-            </div>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Mouse2.jpg" alt="Auricular" />
-              <h4>Mouse Gamer X-Lizzard cableado</h4>
-              <p>$470</p>
-              <button><a href="#">Agregar al carrito</a></button>
-            </div>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Mouse3.jpg" alt="Auricular" />
-              <h4>Mouse Gamer Coolermaster MM-830</h4>
-              <p>$1800</p>
-              <button><a href="#">Agregar al carrito</a></button>
-            </div>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Mouse4.jpg" alt="Auricular" />
-              <h4>Mouse HyperX Pulsefire Haste Black</h4>
-              <p>$2500</p>
-              <button><a href="#">Agregar al carrito</a></button>
+            <div class="product">
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Mouse1.jpg" alt="Auricular" />
+                <h4>Mouse inalambrico Logitech M170 negro</h4>
+                <p>$200</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Mouse2.jpg" alt="Auricular" />
+                <h4>Mouse Gamer X-Lizzard cableado</h4>
+                <p>$470</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Mouse3.jpg" alt="Auricular" />
+                <h4>Mouse Gamer Coolermaster MM-830</h4>
+                <p>$1800</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Mouse4.jpg" alt="Auricular" />
+                <h4>Mouse HyperX Pulsefire Haste Black</h4>
+                <p>$2500</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
             </div>
           </div>
           <div class="product-div">
             <h3>Parlantes</h3>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Parlantes1.jpg" alt="Auricular" />
-              <h4>Parlante Genius SP-Q160 6W azul</h4>
-              <p>$300</p>
-              <button><a href="#">Agregar al carrito</a></button>
-            </div>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Parlantes2.jpg" alt="Auricular" />
-              <h4>Parlante Genius SW-2.1 300X negro</h4>
-              <p>$1000</p>
-              <button><a href="#">Agregar al carrito</a></button>
-            </div>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Parlantes3.jpg" alt="Auricular" />
-              <h4>Parlante Genius SW-2.1 300X negro</h4>
-              <p>$1800</p>
-              <button><a href="#">Agregar al carrito</a></button>
-            </div>
-            <div class="product-elementos caja-product">
-              <img src="./imagenes/Parlantes4.jpg" alt="Auricular" />
-              <h4>Parlante Genius GX Gaming SW-G2.1 1200</h4>
-              <p>$3000</p>
-              <button><a href="#">Agregar al carrito</a></button>
+            <div class="product">
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Parlantes1.jpg" alt="Auricular" />
+                <h4>Parlante Genius SP-Q160 6W azul</h4>
+                <p>$300</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Parlantes2.jpg" alt="Auricular" />
+                <h4>Parlante Genius SW-2.1 300X negro</h4>
+                <p>$1000</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Parlantes3.jpg" alt="Auricular" />
+                <h4>Parlante Genius SW-2.1 300X negro</h4>
+                <p>$1800</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
+              <div class="product-elementos caja-product">
+                <img src="./imagenes/Parlantes4.jpg" alt="Auricular" />
+                <h4>Parlante Genius GX Gaming SW-G2.1 1200</h4>
+                <p>$3000</p>
+                <button><a href="#">Agregar al carrito</a></button>
+              </div>
             </div>
           </div>
         </div>
@@ -249,16 +257,17 @@
             </ul>
           </div>
         </div>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26233.2409212969!2d-56.23692107184091!3d-34.72648428729589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a1cd4c5158acf3%3A0xe0a43fef314c51a4!2s15900%20Las%20Piedras%2C%20Departamento%20de%20Canelones!5e0!3m2!1ses-419!2suy!4v1691857836595!5m2!1ses-419!2suy"
-          width="600"
-          height="450"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
       </div>
+
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26233.2409212969!2d-56.23692107184091!3d-34.72648428729589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a1cd4c5158acf3%3A0xe0a43fef314c51a4!2s15900%20Las%20Piedras%2C%20Departamento%20de%20Canelones!5e0!3m2!1ses-419!2suy!4v1691857836595!5m2!1ses-419!2suy"
+        width="600"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
 
       <span
         >Todos los derechos reservados Copyright © 2023
