Arreglo final de mdq

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#beneficios">Beneficios</a></li>
             <li><a href="#footer">Contacto</a></li>
           </div>
-          <a href=""
+          <a href="./Registro/registro.html"
             ><img src="./imagenes/user-login.png" alt="User" class="user"
           /></a>
           <a href=""
