--- a/Login/login.html
+++ b/Login/login.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Itotecno / Registro</title>
-    <link rel="stylesheet" href="registro.css" />
+    <title>Document</title>
+    <link rel="stylesheet" href="login.css" />
   </head>
   <body>
     <main>
@@ -15,12 +15,8 @@
               ><img src="./volver-flecha.png" alt="volver" />Volver al Inicio</a
             >
           </div>
-          <h1>Registrarse</h1>
+          <h1>Iniciar Sesión</h1>
           <form class="formulario">
-            <div>
-              <label for="name">Nombre Completo:</label>
-              <input type="text" id="name" placeholder="Escribe tu Nombre" />
-            </div>
             <div>
               <label for="email">Correo Electrónico:</label>
               <input type="email" id="email" placeholder="Escribe tu email" />
@@ -33,18 +29,10 @@
                 placeholder="Escribe tu Contraseña"
               />
             </div>
-            <div>
-              <label for="repeatpass">Repetir Contraeña:</label>
-              <input
-                type="password"
-                id="repeatpass"
-                placeholder="Escribe tu Contraseña"
-              />
-            </div>
           </form>
-          <input type="submit" value="Registrate" class="input-submit" />
+          <input type="submit" value="Ingresar" class="input-submit" />
           <p>
-            ¿Ya tiene una cuenta? <a href="/Login/login.html">Iniciar Sesión</a>
+            ¿Has olvidado tu contraseña? <a href="">Restablecer Contraseña</a>
           </p>
         </div>
       </section>
