--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Itotecno</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="./itotecno.png" type="image/x-png" />
+    <link
+      rel="shortcut icon"
+      href="./imagenes/itotecno.png"
+      type="image/x-png"
+    />
     <link rel="stylesheet" href="mediaqueries.css" />
     <link
       rel="stylesheet"
