--- a/Registro/registro.html
+++ b/Registro/registro.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Itotecno / Registro</title>
     <link rel="stylesheet" href="registro.css" />
+    <link
+      rel="shortcut icon"
+      href="./imagenes/itotecno.png"
+      type="image/x-png"
+    />
   </head>
   <body>
     <main>
